# mcp-tool-auditor

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  action.yml  cli.py  config.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
auditor/: __init__.py  models.py  scanner.py
auditor/analyzers/: __init__.py  heuristic.py  rugpul.py  schema.py  static.py
auditor/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
docs/: ADOPTION_CHECKLIST.md  RELEASE_NOTES_v1.2.0.md  RULES.md
docs/samples/: sample-report.json  sample-report.md  sample-report.sarif
docs/superpowers/plans/: 2026-06-23-behavioral-atpa-detector.md
docs/superpowers/specs/: 2026-06-23-behavioral-atpa-detector-design.md  2026-06-23-source-scan-design.md
mcp-tool-auditor/: CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  setup.py
mcp-tool-auditor/mcp_tool_auditor/: __init__.py
mcp-tool-auditor/mcp_tool_auditor.egg-info/: entry_points.txt  requires.txt  top_level.txt
mcp-tool-auditor/mcp_tool_auditor/auditor/: __init__.py  models.py  scanner.py
mcp-tool-auditor/mcp_tool_auditor/auditor/analyzers/: schema.py  static.py
mcp-tool-auditor/mcp_tool_auditor/auditor/reporters/: __init__.py
mcp-tool-auditor/mcp_tool_auditor/auditor/signatures/: descriptions.yaml
mcp-tool-auditor/mcp_tool_auditor/offensive/: atpa_server.py  rugpull_sim.py
mcp-tool-auditor/tests/: test_scanner.py
mcp-tool-auditor/tests/fixtures/: __init__.py
mcp_tool_auditor/: __init__.py  cli.py  config.py  logging_config.py  metrics.py  security.py  validation.py
mcp_tool_auditor.egg-info/: PKG-INFO  SOURCES.txt
mcp_tool_auditor/auditor/: models.py  remediation.py  scanner.py  suppressions.py
mcp_tool_auditor/auditor/analyzers/: __init__.py  behavioral.py  heuristic.py  patterns.py  rugpull.py  static.py
mcp_tool_auditor/auditor/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
mcp_tool_auditor/auditor/signatures/: __init__.py  parameters.yaml
mcp_tool_auditor/auditor/source/: __init__.py  js_analyzer.py  python_analyzer.py  scanner.py
mcp_tool_auditor/offensive/: __init__.py  poisoner.py
offensive/: __init__.py  atpa_server.py  poisoner.py  rugpull_sim.py
tests/: __init__.py  test_behavior_integration.py  test_behavioral.py  test_cli_behavior.py  test_http_auth_session.py  test_patterns.py  test_remediation.py  test_sarif_reporter.py  test_scanner.py  test_source_scan.py
tests/fixtures/: poisoned_tools.json
